# fantasycalc-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/fantasycalc_cli/: __init__.py  cli.py  client.py
tests/: test_cli.py  test_client.py
