[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fantasycalc-cli"
version = "0.1.0"
description = "CLI for the FantasyCalc dynasty fantasy football valuation API"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "typer>=0.12",
    "rich",
    "requests",
]

[project.scripts]
fantasycalc = "fantasycalc_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/fantasycalc_cli"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
    "responses",
]
